<resources>
    <string name="app_name">ShoppingList</string>
    <string name="delete">Delete All</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="Add">Add</string>
    <string name="quantity">Quantity</string>
    <string name="about">Share</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="confirmation">Confirmation</string>
    <string name="areYouSure">Are you sure?</string>
    <string name="Hi">Hi!</string>
    <string name="notifications">Notifications:</string>
    <string name="on">On</string>
    <string name="off">Off</string>
</resources>